--- a/.hintrc
+++ b/.hintrc
@@ -8,7 +8,10 @@
       {
         "ignore": [
           "scrollbar-width",
-          "scrollbar-width: none"
+          "scrollbar-width: none",
+          "backdrop-filter",
+          "user-select",
+          "-webkit-user-drag"
         ]
       }
     ]
