--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
