--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@flaticon/flaticon-uicons": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.7",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
